[package]
name = "main"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.53", features = ["derive"] }
rayon = "1.11.0"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
